--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,6 @@
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
+
+  {% include cookie-consent.html %}
 </head>
