--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,5 +26,7 @@ layout: default
     {% include navlinks.html %}
   </div>
 
+  {% include cookie-consent.html %}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
