--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -1,5 +1,5 @@
-<script defer src="/assets/js/cookieconsent.js"></script>
-<script defer src="/assets/js/cookieconsent-init.js"></script>
+<script defer src="/css/cookieconsent.js"></script>
+<script defer src="/js/cookieconsent-init.js"></script>
 
 {%- if jekyll.environment == 'production' and site.google_analytics -%}
 <!-- Google tag (gtag.js) -->
