--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <script type="text/javascript" src="/js/highlightjs/languages/powershell.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
 
-  <script defer src="/css/cookieconsent.js"></script>
+  <script defer src="/js/cookieconsent.js"></script>
   <script defer src="/js/cookieconsent-init.js"></script>
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
