--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="/css/cookieconsent.css" media="print" onload="this.media='all'">
   {%- feed_meta -%}
-
+  {%- include cookie-consent.html -%}
+  
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
