--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,6 @@
 <!-- Google tag (gtag.js) --> 
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-<script>
+<script async data-cookiecategory="analytics" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script type="text/plain" data-cookiecategory="analytics">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
