--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,5 +1,5 @@
 <!-- Google tag (gtag.js) --> 
-<script async data-cookiecategory="analytics" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script type="text/plain" async data-cookiecategory="analytics" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script type="text/plain" data-cookiecategory="analytics">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
